# zephyrus-control

./: CMakeLists.txt  README.md  atkacpi_ops.c  atkacpi_ops.h  main.c  ryzenadj_ops.c  ryzenadj_ops.h  yaml_parsers.c  yaml_parsers.h
